--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,14 +18,29 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".MenuPages"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
-
         <activity
-            android:name=".MinhActivity"
-            android:label="@string/title_activity_minh" >
+            android:name=".BookDetailPage"
+            android:label="@string/title_activity_book_detail_page" >
+        </activity>
+        <activity
+            android:name=".PlayingPages"
+            android:label="@string/title_activity_playing_pages" >
+        </activity>
+        <activity
+            android:name=".Settings"
+            android:label="@string/title_activity_settings" >
+        </activity>
+        <activity
+            android:name=".MyBooks"
+            android:label="@string/title_activity_my_books" >
+        </activity>
+        <activity
+            android:name=".Favorites"
+            android:label="@string/title_activity_favorites" >
         </activity>
     </application>
 
